# EducationPlatform

./: .env_example  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose.yml  hashing.py  main.py  pyproject.toml  settings.py
.github/workflows/: code-quality.yml
api/: handlers.py  models.py
db/: __init__.py  dals.py  models.py  session.py
migrations/: env.py
migrations/versions/: 070617fb71ca_renamed_roles_enum.py  1c633e167f3f_added_enum_for_currency.py  220163f80de1_token_model.py  4026b68e4064_renamed_user_role.py  5d0bf66b5d29_updated_on_update.py  6386c946bf2a_unique_bought_user_coruses.py  6a644f8ae1fc_create_table_for_users.py  6d8f4582fb0f_init.py  72af6c27fa47_created_course_model.py  82b29e8dda92_created_course_model.py  92d417dfa95a_remov_back_populates_on_course.py  ac4fadc26f45_recreated.py  bd7798f01230_recreated.py  c3e4ea810992_added_password.py  dc630c076b95_back_populate_payments.py  ed787a06728b_recreated.py  f09a3510b339_roles_for_user.py  f504084a606c_create_payment_model.py
src/: database.py  hashing.py  logger.py  main.py  session.py  settings.py  utils.py
src/auth/: dal.py  dao.py  dependencies.py  enums.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py
src/auth/enums/: __init__.py  courses.py  user.py
src/auth/services/: __init__.py  auth.py  auth_service.py  hasher.py  permission.py  token.py  token_manager.py
src/auth/services/permission/: __init__.py  author.py  base.py  user.py
src/author/: model.py
src/base/: dao.py  dependencies.py  models.py  permission.py  service.py
src/courses/: admin.py  dao.py  dependencies.py  enums.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py
src/lessons/: dao.py  dependencies.py  enums.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py
src/payment/: enums.py  models.py  router.py  schemas.py  service.py
src/payment/services/: __init__.py  payment.py  stripe.py
src/users/: __init__.py  dal.py  dao.py  dependencies.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/users/admin/: __init__.py  author.py  user.py
src/users/dao/: __init__.py  author.py
src/users/dependencies/: __init__.py  author.py  user.py
src/users/enums/: __init__.py  user_roles.py
src/users/exceptions/: __init__.py  author.py  user.py
src/users/models/: __init__.py  author.py  user.py  user_courses.py  users.py
src/users/permissions/: __init__.py  author.py  user.py
src/users/routers/: __init__.py  admin.py  author.py  user.py
src/users/schemas/: __init__.py  author.py  user.py
src/users/services/: __init__.py  author.py  user.py  user_courses.py
tests/: conftest.py
tests/users/: test_dal.py  test_router.py  test_service.py
