[project]
name = "educationplatform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.2",
    "envparse>=0.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "passlib>=1.7.4",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "sentry-sdk[fastapi]>=2.31.0",
    "sqlalchemy[mypy]>=2.0.41",
    "starlette-exporter>=0.23.0",
    "types-passlib>=1.7.7.20250602",
    "uvicorn>=0.34.3",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true

[tool.ruff]
line-length = 80
